--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
-<html lang="en-US" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en-US" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
    
-    <head>
+    <head>        
+        <style>
+            body {
+                    background-image: url('https://1.bp.blogspot.com/-ahkn5ozr7nU/XrKvRSMF6TI/AAAAAAAB7NY/kE08zvtZdSwD_VRAziFwMPVLBZl_vu3CwCNcBGAsYHQ/s1600/background_v8_s22.webp');
+                  }
+        </style>
         <meta charset="ISO-8859-1">
         <title>Index</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     </head>
     <body>
+            <h1 style="text-align: center; color: white">Welcome!</h1>
+    &nbsp;
+    <form style="text-align: center" th:action="@{/logout}" method="post">
+        <input style="text-align: right" type="submit" value="Logout" />
+    </form>
+    <div sec:authorize="hasAnyAuthority('CREATOR', 'ADMIN')">
+        <a href="/new">Create New Product</a>
+    </div>
+    
+    <div sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
+    <a th:href="/@{'/edit/' + ${product.id}}">Edit</a>
+</div>
+    <div sec:authorize="hasAuthority('ADMIN')">
+    <a th:href="/@{'/delete/' + ${product.id}}">Delete</a>
+</div>
         <div>
-            <h2><a href="new_add">Add driver to Transfer List</a></h2>
+            <h2 style="text-align: center;"><a href="new_add">Add driver to Transfer List</a></h2>
             <br />
             
-            <table border="1">
+                <form style="text-align: left; padding-left: 160px;" th:action="@{/}" method="get">
+                    <input id="search" type="text" name="keyword">
+                    <button type="submit" style="margin-bottom: 15px;">Search</button>   
+                </form>
+            
+            <div layout:fragment="content" class="container mySpace">
+                <div class="card">
+                    <div class="card-body">
+                         <table class="table table-hover" style="background-color: whitesmoke;">
                 <thead>
                     <tr>
                         <td>Driver Id</td>
-                        <td>Driver Name</td>
-                        <td>Driver Name</td>
+                        <td>First Name</td>
+                        <td>Last Name</td>
                         <td>Edit</td>
                         <td>Delete</td>
                     </tr>
@@ -28,12 +56,15 @@
                             <td th:text="${drivers.firstname}">Name</td>
                             <td th:text="${drivers.lastname}">Last Name</td>
                       
-                            <td><a th:href="@{'/edit/' + ${drivers.id}}">Edit Driver</a></td>
-                            <td><a th:href="@{'/delete/' + ${drivers.id}}">Delete from Transfer List</a></td>
+                            <td><a th:href="@{'/edit/' + ${drivers.id}}" class="btn btn-dark" style="background-color: darkgray;">Edit Player</a></td>
+                            <td><a th:href="@{'/delete/' + ${drivers.id}}" class="btn btn-dark" style="background-color: darkgray;">Delete from Transfer List</a></td>
                         </tr>
                     </th:block>
                 </tbody>
             </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
