modified and deleted files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <head>        
         <style>
             body {
-                    background-image: url('https://1.bp.blogspot.com/-ahkn5ozr7nU/XrKvRSMF6TI/AAAAAAAB7NY/kE08zvtZdSwD_VRAziFwMPVLBZl_vu3CwCNcBGAsYHQ/s1600/background_v8_s22.webp');
+                    background-image: url('https://www.formula1.com/content/dam/fom-website/manual/Misc/2020CalendarAnnouncement/GettyImages-1180733959.jpg');
                   }
         </style>
         <meta charset="ISO-8859-1">
