--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                    background-image: url('https://www.formula1.com/content/dam/fom-website/manual/Misc/2020CalendarAnnouncement/GettyImages-1180733959.jpg');
+                  }
+        </style>
+        <title>Add Driver to Transfer List</title>
+        <meta charset="ISO-8859-1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     </head>
     <body>
-        <div>TODO write content</div>
+
+        <div style="text-align: center">
+            <h1 style="text-align: center; color: white">Welcome!</h1>
+
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" value="Logout" />
+            </form>
+            <h1 style="text-align: center; color: white">Details about the driver</h1>
+            <h3><a href="/">Back to the list</a></h3>
+        </div>
+        <div>
+            <br />
+            
+            <div layout:fragment="content" class="container mySpace">
+                <div class="card">
+                    <div class="card-body">
+
+            <form th:object="${driver}" th:action="@{/save_driver}" method="post">
+                    <table class="table table-hover" style="background-color: whitesmoke;">
+                    <tr>
+                        <td>First name</td>
+                        <td><input type="text" th:field="*{firstname}" required="required" pattern="[A-Za-z]{1,20}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Last name</td>
+                        <td><input type="text" th:field="*{lastname}" required="required" pattern="[A-Za-z]{1,20}" /></td>
+                    </tr>
+                    <tr>
+                        <td><button type="submit">Add to List</button></td>
+                    </tr>
+                    </table>
+                    </div>
+                </div>                
+        </div>
     </body>
 </html>
